tests/cases/standard-library/ok/process/std-process-abort.ari
// Covers abort hook lowering without executing the aborting path.
fn abort_if_requested(run: bool) -> void {
  if run {
    process::abort();
  }
}

fn main() -> i64 {
  abort_if_requested(false);
  return 0;
}
