tests/cases/standard-library/errors/ari-builtin-signature-result.ari
extern "ari" fn bad(value: i64) -> u64 = "ari_builtin_write_i64";

fn main() -> i64 {
  return 0;
}
